header, navbar e sidebar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         </head>
         <body>
             <header>
-                <img src="assets/imgs/Logo2(MarcaD'Agua-SemEscrita-Transparente).webp" alt="Logo2" id="headerLogo">
+                <div id="headerLogo"></div>
                 <ul class="socialHeader">
                     <li><a href="#">INSTAGRAM</a></li>
                     <li><a href="#">WHATSAPP</a></li>
@@ -17,20 +17,29 @@
                 </ul>
             </header>
             <nav>
-                <ul>
-                    <li><a href="#">PAGE 1</a></li>
-                    <li><a href="#">PAGE 2</a></li>
-                    <li><a href="#">PAGE 3</a></li>
-                    <li><a href="#">PAGE 4</a></li>
+                <ul class="navBar">
+                    <li><a href="/index.html">INÍCIO</a></li>
+                    <li><a href="/professores.html">CORPO DOCENTE</a></li>
+                    <li><a href="/funcionarios.html">QUADRO DE FUNCIONÁRIOS</a></li>
+                    <li><a href="/cardapio.html">CARDÁPIO</a></li>
+                    <li><a href="/calendario.html">CALENDÁRIO ESCOLAR</a></li>
+                    <li><a href="/projetos.html">PROJETOS</a></li>
+                    <li><a href="/transparencia.html">TRANSPARÊNCIA</a></li>
+                    <li><a href="/contato.html">CONTATO</a></li>
                 </ul>
             </nav>
             <main>
-                <aside>
-                    <ul>
-                        <li><a href="#">PAGE 1</a></li>
-                        <li><a href="#">PAGE 2</a></li>
-                        <li><a href="#">PAGE 3</a></li>
-                        <li><a href="#">PAGE 4</a></li>
+                <aside id="sideBar">
+                    <ul id="sideBarMenu">
+                        <li><a href="/index.html">INÍCIO</a></li>
+                        <li><a href="/professores.html">CORPO DOCENTE</a></li>
+                        <li><a href="/funcionarios.html">QUADRO DE FUNCIONÁRIOS</a></li>
+                        <li><a href="/cardapio.html">CARDÁPIO</a></li>
+                        <li><a href="/calendario.html">CALENDÁRIO ESCOLAR</a></li>
+                        <li><a href="/projetos.html">PROJETOS</a></li>
+                        <li><a href="/transparencia.html">TRANSPARÊNCIA</a></li>
+                        <li><a href="/contato.html">CONTATO</a></li>
+                </ul>
                     </ul>
                 </aside>
                 <article>
@@ -46,11 +55,16 @@
                 </article>
             </main>
             <footer>
-                <ul>
-                    <li><a href="#">PAGE 1</a></li>
-                    <li><a href="#">PAGE 2</a></li>
-                    <li><a href="#">PAGE 3</a></li>
-                    <li><a href="#">PAGE 4</a></li>
+                <ul class="footerBar">
+                    <li><a href="/index.html">INÍCIO</a></li>
+                    <li><a href="/professores.html">CORPO DOCENTE</a></li>
+                    <li><a href="/funcionarios.html">QUADRO DE FUNCIONÁRIOS</a></li>
+                    <li><a href="/cardapio.html">CARDÁPIO</a></li>
+                    <li><a href="/calendario.html">CALENDÁRIO ESCOLAR</a></li>
+                    <li><a href="/projetos.html">PROJETOS</a></li>
+                    <li><a href="/transparencia.html">TRANSPARÊNCIA</a></li>
+                    <li><a href="/contato.html">CONTATO</a></li>
+                </ul>
                 </ul>
                 <ul>
                     <li><a href="#">INSTAGRAM</a></li>
@@ -65,4 +79,5 @@
                 </address>
             </footer>
         </body>
+        <script src="js/script.js"></script>
     </html>
