sidebar, footer, article

--- a/index.html
+++ b/index.html
@@ -65,18 +65,19 @@
                     <li><a href="/transparencia.html">TRANSPARÊNCIA</a></li>
                     <li><a href="/contato.html">CONTATO</a></li>
                 </ul>
-                </ul>
-                <ul>
-                    <li><a href="#">INSTAGRAM</a></li>
-                    <li><a href="#">WHATSAPP</a></li>
-                    <li><a href="#">SITE</a></li>
-                    <li><a href="#">GITHUB</a></li>
-                </ul>
-                <address>
-                    <span>EMAIL</span>
-                    <span>ENDEREÇO</span>
-                    <span>CONTATO</span>
-                </address>
+                <div class="contactInfo">
+                    <ul class="socialFooter">
+                        <li><a href="#">INSTAGRAM</a></li>
+                        <li><a href="#">WHATSAPP</a></li>
+                        <li><a href="#">SITE</a></li>
+                        <li><a href="#">GITHUB</a></li>
+                    </ul>
+                    <address>
+                        <a href="emeb.pingodegentergt@gmail.com">E-MAIL</a>
+                        <a href="">ENDEREÇO</a>
+                        <a href="">CONTATO</a>
+                    </address>
+                </div>
             </footer>
         </body>
         <script src="js/script.js"></script>
