novas paginas, estilização básica e estrutura básica

--- a/contato.html
+++ b/contato.html
@@ -43,7 +43,7 @@
                 </aside>
                 <article>
                     <section>
-                        <h1>INICIO</h1>
+                        <h1>CONTATO</h1>
                     </section>
                     <section>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio obcaecati voluptate accusantium molestias vero. Molestiae mollitia, obcaecati similique consequuntur maiores veniam exercitationem dolorem molestias, velit nostrum culpa necessitatibus rem officiis?
@@ -51,7 +51,7 @@
                     <section>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex asperiores dolores dolore nisi, nobis cum natus porro qui non est, libero perspiciatis ab fugiat ut, assumenda iure maxime earum aperiam.
                     </section>
-
+                    
                 </article>
             </main>
             <footer>
