favicon, cards docentes

--- a/professores.html
+++ b/professores.html
@@ -3,8 +3,9 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="icon" type="image/x-icon" href="/assets/imgs/favicon-32x32.png">
             <link rel="stylesheet" href="css/style.css">
-            <title>PINGO DE GENTE</title>
+            <title>CORPO DOCENTE</title>
         </head>
         <body>
             <header>
@@ -38,20 +39,194 @@
                         <li><a href="/projetos.html">PROJETOS</a></li>
                         <li><a href="/transparencia.html">TRANSPARÊNCIA</a></li>
                         <li><a href="/contato.html">CONTATO</a></li>
-                </ul>
                     </ul>
                 </aside>
                 <article>
                     <section>
-                        <h1>PROFESSORES</h1>
+                        <div class="container">
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardOne">Professor 1</h2>
+                                        <p class="cardOne">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam sit exercitationem itaque voluptas accusantium repellendus! Laudantium, ullam! Dolor sint laudantium ab obcaecati illo nulla doloribus dicta aut rem, quas nam.</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>01</h2>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardTwo">Professor 2</h2>
+                                        <p class="cardTwo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dicta placeat maiores, totam esse excepturi exercitationem, voluptates iste explicabo veritatis quod earum odit dolorum quas molestiae consequuntur vitae dolores ex.</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>02</h2>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardThree">Professor 3</h2>
+                                        <p class="cardThree">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id minus alias officiis hic vitae inventore harum aliquid dolore. Labore iure dicta iusto ipsum aspernatur voluptates consectetur officiis, modi pariatur aliquid!</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>03</h2>
+                                </div>
+                            </div>
+                        </div>
                     </section>
                     <section>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio obcaecati voluptate accusantium molestias vero. Molestiae mollitia, obcaecati similique consequuntur maiores veniam exercitationem dolorem molestias, velit nostrum culpa necessitatibus rem officiis?
+                        <div class="container">
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardOne">Professor 4</h2>
+                                        <p class="cardOne">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam sit exercitationem itaque voluptas accusantium repellendus! Laudantium, ullam! Dolor sint laudantium ab obcaecati illo nulla doloribus dicta aut rem, quas nam.</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>04</h2>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardTwo">Professor 5</h2>
+                                        <p class="cardTwo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dicta placeat maiores, totam esse excepturi exercitationem, voluptates iste explicabo veritatis quod earum odit dolorum quas molestiae consequuntur vitae dolores ex.</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>05</h2>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardThree">Professor 6</h2>
+                                        <p class="cardThree">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id minus alias officiis hic vitae inventore harum aliquid dolore. Labore iure dicta iusto ipsum aspernatur voluptates consectetur officiis, modi pariatur aliquid!</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>06</h2>
+                                </div>
+                            </div>
+                        </div>
                     </section>
                     <section>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex asperiores dolores dolore nisi, nobis cum natus porro qui non est, libero perspiciatis ab fugiat ut, assumenda iure maxime earum aperiam.
+                        <div class="container">
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardOne">Professor 7</h2>
+                                        <p class="cardOne">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam sit exercitationem itaque voluptas accusantium repellendus! Laudantium, ullam! Dolor sint laudantium ab obcaecati illo nulla doloribus dicta aut rem, quas nam.</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>07</h2>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardTwo">Professor 8</h2>
+                                        <p class="cardTwo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dicta placeat maiores, totam esse excepturi exercitationem, voluptates iste explicabo veritatis quod earum odit dolorum quas molestiae consequuntur vitae dolores ex.</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>08</h2>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardThree">Professor 9</h2>
+                                        <p class="cardThree">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id minus alias officiis hic vitae inventore harum aliquid dolore. Labore iure dicta iusto ipsum aspernatur voluptates consectetur officiis, modi pariatur aliquid!</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>09</h2>
+                                </div>
+                            </div>
+                        </div>
                     </section>
-                    
+                    <section>
+                        <div class="container">
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardOne">Professor 10</h2>
+                                        <p class="cardOne">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam sit exercitationem itaque voluptas accusantium repellendus! Laudantium, ullam! Dolor sint laudantium ab obcaecati illo nulla doloribus dicta aut rem, quas nam.</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>10</h2>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardTwo">Professor 11</h2>
+                                        <p class="cardTwo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dicta placeat maiores, totam esse excepturi exercitationem, voluptates iste explicabo veritatis quod earum odit dolorum quas molestiae consequuntur vitae dolores ex.</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>11</h2>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardThree">Professor 12</h2>
+                                        <p class="cardThree">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id minus alias officiis hic vitae inventore harum aliquid dolore. Labore iure dicta iusto ipsum aspernatur voluptates consectetur officiis, modi pariatur aliquid!</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>12</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div class="container">
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardOne">Professor 13</h2>
+                                        <p class="cardOne">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam sit exercitationem itaque voluptas accusantium repellendus! Laudantium, ullam! Dolor sint laudantium ab obcaecati illo nulla doloribus dicta aut rem, quas nam.</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>13</h2>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardTwo">Professor 14</h2>
+                                        <p class="cardTwo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dicta placeat maiores, totam esse excepturi exercitationem, voluptates iste explicabo veritatis quod earum odit dolorum quas molestiae consequuntur vitae dolores ex.</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>14</h2>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardThree">Professor 15</h2>
+                                        <p class="cardThree">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id minus alias officiis hic vitae inventore harum aliquid dolore. Labore iure dicta iusto ipsum aspernatur voluptates consectetur officiis, modi pariatur aliquid!</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>15</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </article>
             </main>
             <footer>
