--- a/calendario.html
+++ b/calendario.html
@@ -3,6 +3,8 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+            <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
             <link rel="icon" type="image/x-icon" href="/assets/imgs/favicon-32x32.png">
             <link rel="stylesheet" href="css/style.css">
             <title>CALENDÁRIO ESCOLAR</title>
@@ -44,15 +46,59 @@
                 </aside>
                 <article>
                     <section>
-                        <h1>CALENDARIO</h1>
+                        <div class="mobile-header z-depth-1">
+                            <div class="row">
+                                <div class="col-2">
+                                    <a href="#" data-activates="sidebar" class="button-collapse" style="">
+                                        <i class="material-icons">menu</i>
+                                    </a>
+                                </div>
+                                <div class="col">
+                                    <h4>Events</h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main-wrapper">
+                            <div class="content-wrapper grey lighten-3">
+                                <div class="container">
+                                    <div class="calendar-wrapper z-depth-2">
+                                        <div class="header-background">
+                                            <div class="calendar-header">
+                                                <a class="prev-button" id="prev">
+                                                    <i class="material-icons">keyboard_arrow_left</i>
+                                                </a>
+                                                <a class="next-button" id="next">
+                                                    <i class="material-icons">keyboard_arrow_right</i>
+                                                </a>
+                                                <div class="row header-title">
+                                                    <div class="header-text">
+                                                        <h3 id="month-name">February</h3>
+                                                        <h5 id="todayDayName">Today is Friday 7 Feb</h5>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="calendar-content">
+                                            <div id="calendar-table" class="calendar-cells">
+                                                <div id="table-header">
+                                                    <div class="row">
+                                                        <div class="col">Mon</div>
+                                                        <div class="col">Tue</div>
+                                                        <div class="col">Wed</div>
+                                                        <div class="col">Thu</div>
+                                                        <div class="col">Fri</div>
+                                                        <div class="col">Sat</div>
+                                                        <div class="col">Sun</div>
+                                                    </div>
+                                                </div>
+                                                <div id="table-body" class=""></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </section>
-                    <section>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio obcaecati voluptate accusantium molestias vero. Molestiae mollitia, obcaecati similique consequuntur maiores veniam exercitationem dolorem molestias, velit nostrum culpa necessitatibus rem officiis?
-                    </section>
-                    <section>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex asperiores dolores dolore nisi, nobis cum natus porro qui non est, libero perspiciatis ab fugiat ut, assumenda iure maxime earum aperiam.
-                    </section>
-                    
                 </article>
             </main>
             <footer>
@@ -75,5 +121,12 @@
                 </div>
             </footer>
         </body>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+        <script>
+            $(".button-collapse").sideNav();
+        </script>
         <script src="js/script.js"></script>
     </html>
+    <!--https://codepen.io/just_monk/pen/ZavoQq?editors=1010-->>
