--- a/contato.html
+++ b/contato.html
@@ -4,6 +4,7 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="icon" type="image/x-icon" href="/assets/imgs/favicon-32x32.png">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
             <link rel="stylesheet" href="css/style.css">
             <title>CONTATO</title>
         </head>
@@ -43,17 +44,35 @@
                 </ul>
                     </ul>
                 </aside>
-                <article>
+                <article class="articleContato">
                     <section>
-                        <h1>CONTATO</h1>
-                    </section>
-                    <section>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio obcaecati voluptate accusantium molestias vero. Molestiae mollitia, obcaecati similique consequuntur maiores veniam exercitationem dolorem molestias, velit nostrum culpa necessitatibus rem officiis?
-                    </section>
-                    <section>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex asperiores dolores dolore nisi, nobis cum natus porro qui non est, libero perspiciatis ab fugiat ut, assumenda iure maxime earum aperiam.
-                    </section>
-                    
+                        <div class="contactContainer">
+                            <div class="contactContent">
+                                <div class="left-side">
+                                    <div class="address details">
+                                        <a href="https://maps.app.goo.gl/TgZztnL5Yj343sj16" target="_blank"><i class="fas fa-map-marker-alt"></i>
+                                        <div class="topic">Endereço</div>
+                                        <div class="text-one">Rua Isabel Maria Vieira Eiró, s/n</div>
+                                        <div class="text-two">Jardim Eiji Matsumura</div></a>
+                                    </div>
+                                    <div class="phone details">
+                                        <a href="https://api.whatsapp.com/send?phone=551338225152" target="_blank"><i class="fas fa-phone-alt"></i>
+                                        <div class="topic">Telefone</div>
+                                        <div class="text-one">(13) 3822-5152</div></a>
+                                    </div>
+                                    <div class="email details">
+                                        <a href="mailto:emeb.pingodegentergt@gmail.com?subject=CONTATO" target="_blank"><i class="fas fa-envelope"></i>
+                                        <div class="topic">Email</div>
+                                        <div class="text-one">emeb.pingodegentergt@gmail.com</div></a>
+                                    </div>
+                                </div>
+                                <div class="right-side">
+                                    <div class="topic-text">EMEB PINGO DE GENTE</div>
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d1808.3056492151038!2d-47.83620264115585!3d-24.517199655932135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjTCsDMxJzAzLjUiUyA0N8KwNTAnMDkuNiJX!5e1!3m2!1spt-BR!2sbr!4v1732018816279!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                </div>
+                            </div>
+                        </div>
+                    </section>                    
                 </article>
             </main>
             <footer>
